--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: DuckPluck06's or Tanner Woods homepage
+title: DuckPluck06's homepage
 description: Bookmark this to keep an eye on my project updates!
