--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: pages-themes/hacker@v0.2.0
-title: DuckPluck06's homepage
+title: Tanner Woods's homepage
 description: Bookmark this to keep an eye on my project updates!
 plugins:
 - jekyll-remote-theme 
